GH-159 - Use Neo4j's causal bookmarks.
This brings in support for causal bookmarks of Neo4j. It requires no configuration from the user nor an additional library. It works out of the box for everything that runs inside a Spring managed transaction, for both imperative and reactive scenarios.

The core idea for both scenarios is as follows:

* Keep a list of all bookmarks ever retrieved from a cluster
* Pass that list to new transactions, the server sorts and merges them for us, no need to worry about the order
* When the transaction completes, collect the last bookmark from it and replace the used bookmarks from beforehand (and only them) with it. Thus, the bookmark returned by a parallel transactions is not affected
* The bookmarks work as a "at least" indicator, so all new transactions will see at least what they have written and are thus serialisable on the application side of things.

This closes #158. 

Co-authored-by: Gerrit Meier <meistermeier@gmail.com>

--- a/docs/appendix/migrating.adoc
+++ b/docs/appendix/migrating.adoc
@@ -116,7 +116,22 @@ You're than ready to replace annotations:
 |`org.neo4j.ogm.annotation.Relationship`
 |`org.neo4j.springframework.data.core.schema.Relationship`
 
+|`org.springframework.data.neo4j.annotation.EnableBookmarkManagement`
+|No replacement, not needed
+
+|`org.springframework.data.neo4j.annotation.UseBookmark`
+|No replacement, not needed
+
 |===
 
 NOTE: Several Neo4j-OGM annotations have not yet a corresponding annotation in SDN/RX, some will never have.
       We will add to the list above as we support additional features.
+
+=== Bookmarkmanagement
+
+Both `@EnableBookmarkManagement` and `@UseBookmark` as well as the `org.springframework.data.neo4j.bookmark.BookmarkManager`
+interface and it's only implementation `org.springframework.data.neo4j.bookmark.CaffeineBookmarkManager` are gone and are
+not needed anymore.
+
+SDN/RX uses Bookmarks for all transactions, without configuration.
+You can remove the bean declaration of `CaffeineBookmarkManager` as well as the the dependency to `com.github.ben-manes.caffeine:caffeine`.
