--- a/docs/faq/faq.adoc
+++ b/docs/faq/faq.adoc
@@ -42,6 +42,12 @@ NOTE: Be careful that you don't mix up entities retrieved from one database with
       entities than expected when changing the database name in between calls.
       Or worse, you could inevitable store the wrong entities in the wrong database.
 
+== Do I need specific configuration so that transactions work seemles with a Neo4j Causal Cluster?
+
+No, you don't.
+SDN/RX uses Neo4j Causal Cluster bookmarks internally without any configuration on your side required.
+Transactions in the same thread or the same reactive stream following each other will be able to read their previously changed values as you would expect.
+
 == Do I need to use Neo4j specific annotations?
 
 No.
