GH-166 - Introduce ReactiveNeo4jTest.
First, this includes a couple of updates:

* Update to Spring Boot 2.2.6.
* Update to Testcontainers 1.13.0.
* Introduce ReactiveNeo4jTest.

Then it introduces `@ReactiveNeo4jTest`:  This test slice provides only reactive capabilities and can be used in scenarios where `spring.data.neo4j.repositories.type` is set to `reactive` without the need to disable the configuration of `@Transactional`.

This slices checks for the Neo4j version before the test and thus fails without having at least Neo4j harness 4.0.0 on the classpath or a bolt connection to a 4.0.0 server and indicates so with a decent error message.

The change closes #152. 

Co-Authored-By: Gerrit Meier <meistermeier@gmail.com>

--- a/docs/faq/faq.adoc
+++ b/docs/faq/faq.adoc
@@ -135,9 +135,9 @@ And here is the reactive version, omitting the setup for brevity:
 
 [source,java]
 [[reactive-template-example]]
-.TemplateExampleTest.java
+.ReactiveTemplateExampleTest.java
 ----
-include::../../examples/reactive-web/src/test/java/org/neo4j/springframework/data/examples/spring_boot/ReactiveTemplateTest.java[tags=faq.template-reactive]
+include::../../examples/reactive-web/src/test/java/org/neo4j/springframework/data/examples/spring_boot/ReactiveTemplateExampleTest.java[tags=faq.template-reactive]
 ----
 
 == How do I specify parameters in custom queries?
