--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,13 @@
 Spring Data Neo4j Changelog
 ===========================
 
+Changes in version 5.3.0.RC1 (2020-03-31)
+-----------------------------------------
+* DATAGRAPH-1304 - Upgrade to Neo4j OGM 3.2.10.
+* DATAGRAPH-1302 - Release 5.3 RC1 (Neumann).
+* DATAGRAPH-1300 - Support for Neo4j 4.0.
+
+
 Changes in version 5.2.6.RELEASE (2020-03-25)
 ---------------------------------------------
 * DATAGRAPH-1304 - Upgrade to Neo4j OGM 3.2.10.
@@ -1694,6 +1701,7 @@ General
 * Support for building traversal descriptions
 * Support for cross-store persistence including basic transaction support
 * Abstract configuration class
+
 
 
 
