GH-175 - Expose Cypher DSL as experimental API.
This change

* Exposes the Cypher DSL as experimental API and adds a chapter to the documentation
* It removes the `Expression` interface from both `Node` and `Relationship` as they are no expressions.
* It allows symbolic names being reused.

This commit closes #106. 

Co-authored-by: Gerrit Meier <meistermeier@gmail.com>

--- a/docs/faq/faq.adoc
+++ b/docs/faq/faq.adoc
@@ -42,7 +42,7 @@ NOTE: Be careful that you don't mix up entities retrieved from one database with
       entities than expected when changing the database name in between calls.
       Or worse, you could inevitable store the wrong entities in the wrong database.
 
-== Do I need specific configuration so that transactions work seemles with a Neo4j Causal Cluster?
+== Do I need specific configuration so that transactions work seamless with a Neo4j Causal Cluster?
 
 No, you don't.
 SDN/RX uses Neo4j Causal Cluster bookmarks internally without any configuration on your side required.
