GH-194 - Add a technical view of query generation in the docs.
closes #194

--- a/docs/appendix/index.adoc
+++ b/docs/appendix/index.adoc
@@ -9,6 +9,7 @@ include::sdc-repository-query-keywords-reference.adoc[]
 include::sdc-repository-query-return-types-reference.adoc[]
 include::neo4j-client.adoc[]
 include::cypherdsl.adoc[]
+include::query-creation.adoc[]
 include::migrating.adoc[]
 include::build.adoc[]
 :leveloffset: -1
