GH-237 - Fix typo in documentation

--- a/docs/repositories/sdc-repositories.adoc
+++ b/docs/repositories/sdc-repositories.adoc
@@ -736,7 +736,7 @@ Stream<User> findAllByCustomQueryAndStream();
 
 Stream<User> readAllByFirstnameNotNull();
 
-@Query("MATCH (u:User) RETURN u)
+@Query("MATCH (u:User) RETURN u")
 Stream<User> streamAllPaged(Pageable pageable);
 ----
 ====
