--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,12 @@
 Spring Data Neo4j Changelog
 ===========================
 
+Changes in version 5.1.18.RELEASE (2020-06-10)
+----------------------------------------------
+* DATAGRAPH-1318 - Remove Travis CI.
+* DATAGRAPH-1314 - Release 5.1.18 (Lovelace SR18).
+
+
 Changes in version 5.3.0.RELEASE (2020-05-12)
 ---------------------------------------------
 * DATAGRAPH-1318 - Remove Travis CI.
