--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,12 @@
 Spring Data Neo4j Changelog
 ===========================
 
+Changes in version 5.3.1.RELEASE (2020-06-10)
+---------------------------------------------
+* DATAGRAPH-1322 - Tests don't stop the embedded server reliable.
+* DATAGRAPH-1319 - Release 5.3.1 (Neumann SR1).
+
+
 Changes in version 5.2.8.RELEASE (2020-06-10)
 ---------------------------------------------
 * DATAGRAPH-1322 - Tests don't stop the embedded server reliable.
@@ -1734,6 +1740,7 @@ General
 * Support for building traversal descriptions
 * Support for cross-store persistence including basic transaction support
 * Abstract configuration class
+
 
 
 
