--- a/src/main/asciidoc/appendix/conversions.adoc
+++ b/src/main/asciidoc/appendix/conversions.adoc
@@ -165,6 +165,14 @@ If you require the time zone, use a type that supports it (i.e. `ZoneDateTime`) 
 |List of String (The name value of the enum)
 |
 
+|java.net.URL
+|String
+|
+
+|java.net.URI
+|String
+|
+
 |===
 
 == Custom conversions
